Step3 로또(2등) 구현 (#3039)
* refactor (리뷰 반영)

* docs (2단계 기능 도출 및 문서화)

* docs (2단계 기능 도출 및 문서화)

* feature (입력화면구현)

* feature (결과화면 구현)

* feature (복권 구매 자동구매 기능 구현)

* refactor (inputView 리뷰반영)

* refactor (리뷰반영-복권가격 객체로 래핑)

* refactor (리뷰반영-복권 구입 숫자 중복 허용 처리)

* docs (리뷰반영-문서작업에 체크박스 추가)

* refactor (리뷰반영-input view에서 bufferedReader 관리)

* docs (2등 추첨기능 문서화)

* feature (보너스볼을 통한 2등 추첨기능 개발)

---------

Co-authored-by: dino.dd <dino.dd@kakaocorp.com>